--- a/Login-Watchlist API Server/package.json
+++ b/Login-Watchlist API Server/package.json
@@ -2,12 +2,13 @@
   "name": "Login_Watchlist_API_Server",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts":{
-    "start" : "env-cmd -f ./.env nodemon src/app.js"
+  "scripts": {
+    "start": "env-cmd -f ./.env nodemon src/app.js"
   },
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.8",
