--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "lightweight-charts": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-validation": "^3.0.7",
     "styled-components": "^5.1.1",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "validator": "^13.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
