--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-scripts": "3.4.1",
     "react-validation": "^3.0.7",
     "styled-components": "^5.1.1",
-    "typescript": "^3.9.3",
-    "validator": "^13.1.0"
+    "typescript": "^3.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
