--- a/Login-Watchlist API Server/package.json
+++ b/Login-Watchlist API Server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f ./.env nodemon src/app.js"
+    "start": "node src/app.js"
   },
   "license": "MIT",
   "dependencies": {
